--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,8 @@
     <link href="css/main.min.css" rel="stylesheet" media="all">
     <link href="css/style.css" rel="stylesheet" media="all">
    <link href="css/contact.css" rel="stylesheet" media="all">
+      <link href="css/edit.css" rel="stylesheet" media="all">
+
     <!--Favicons-->
     <link rel="shortcut icon" href="images/icon/favicon.jpg">
     <link rel="apple-touch-icon" href="apple-icon.png">
