--- a/works.html
+++ b/works.html
@@ -36,6 +36,7 @@
     <!-- Main CSS-->
     <link href="css/main.min.css" rel="stylesheet" media="all">
     <link href="css/style.css" rel="stylesheet" media="all">
+        <link href="css/edit.css" rel="stylesheet" media="all">
 <link rel="stylesheet" href="css/extra.css">
     <!--Favicons-->
     <link rel="shortcut icon" href="images/icon/favicon.jpg">
