--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                                 <a href="home-main.html">Home</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="about-us.html">about</a>
+                                                <a href="works.html">about</a>
                                             </li>
                                             <li class="menu-item">
                                                 <a href="contact.html">contact</a>
