--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                         <div class="container-fluid">
                             <div class="header__content">
                                 <div class="logo">
-                                    <a href="#">
+                                    <a href="index.html">
                                         <img src="images/logo.png" alt="Tatee" />
                                     </a>
                                 </div>
