--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <div class="container-fluid">
                             <div class="header__content">
                                 <div class="logo">
-                                    <a href="#">
+                                    <a href="index.html">
                                         <img src="images/logo.png" alt="Tatee" />
                                     </a>
                                 </div>
@@ -75,7 +75,7 @@
                                     <nav class="header-nav-menu">
                                         <ul class="menu nav-menu">
                                             <li class="menu-item menu-item-has-children">
-                                                <a href="home-main.html">Home</a>
+                                                <a href="index.html">Home</a>
                                             </li>
                                             <li class="menu-item">
                                                 <a href="works.html">Our Works</a>
