--- a/works.html
+++ b/works.html
@@ -643,6 +643,25 @@
             }
         }
         </script>
+
+        <script>
+window.addEventListener('scroll', function() {
+    const header = document.getElementById('header');
+    const scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+    
+    if (scrollTop > 50) {
+        header.classList.add('scrolled');
+    } else {
+        header.classList.remove('scrolled');
+    }
+});
+
+document.addEventListener('DOMContentLoaded', function() {
+    const header = document.getElementById('header');
+    header.classList.remove('scrolled');
+});
+</script>
+
         
 </body>
 
