--- a/works.html
+++ b/works.html
@@ -163,7 +163,7 @@
                                 <nav class="header-nav-menu">
                                     <ul class="menu nav-menu">
                                         <li class="menu-item menu-item-has-children">
-                                            <a href="/index.html">Home</a>
+                                            <a href="index.html">Home</a>
                                         </li>
                                         <li class="menu-item">
                                             <a href="works.html">Our Works</a>
