--- a/details.html
+++ b/details.html
@@ -108,7 +108,7 @@
             </div>
             <div class="header-mobile d-block d-lg-none">
                 <div class="header-mobile__bar">
-                    <div class="container-fluid">
+                    <div >
                         <div class="header-mobile__bar-inner">
                             <a class="logo" href="index.html">
                                 <img src="images/logo.png" alt="Tatee" />
