--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
             <div class="header-mobile d-block d-lg-none">
                 <div class="header-mobile__bar">
-                    <div class="container-fluid">
+                    <div >
                         <div class="header-mobile__bar-inner">
                             <a class="logo" href="index.html">
                                 <img src="images/logo.png" alt="Tatee" />
@@ -667,21 +667,28 @@
   </script>
   <script>
     $(document).ready(function(){
-      $('.slider').slick({
-        slidesToShow: 3,     // Number of videos shown at once
-        slidesToScroll: 1,
-        arrows: true,        // Show next/prev arrows
-        dots: true,          // Show navigation dots below
-        infinite: false,     // No loop
-        responsive: [
-          {
-            breakpoint: 768,
-            settings: {
-              slidesToShow: 1
-            }
-          }
-        ]
-      });
+     $('.slider').slick({
+  slidesToShow: 3,
+  slidesToScroll: 1,
+  arrows: true,
+  dots: true,
+  infinite: false,
+  responsive: [
+    {
+      breakpoint: 1200,
+      settings: {
+        slidesToShow: 2
+      }
+    },
+    {
+      breakpoint: 768,
+      settings: {
+        slidesToShow: 1
+      }
+    }
+  ]
+});
+
     });
   </script>
   
