--- a/works.html
+++ b/works.html
@@ -37,6 +37,7 @@
     <link href="css/style.css" rel="stylesheet" media="all">
     <link href="css/edit.css" rel="stylesheet" media="all">
     <link rel="stylesheet" href="css/extra.css">
+    <link rel="stylesheet" href="css/contact.css">
     
     <!--Favicons-->
     <link rel="shortcut icon" href="images/icon/favicon.jpg">
@@ -227,12 +228,24 @@
     </header>
     <!-- END HEADER-->
 
+
+
+    <!-- PAGE HEADING -->
+<section class="section page-heading-enhanced">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-8 text-center">
+                <h5 class="title-sub wow fadeInUp" data-wow-delay="0.1s">our portfolio</h5>
+                <h2 class="title-1 wow fadeInUp" data-wow-delay="0.2s">Our Works</h2>
+                <p class="mt-4 wow fadeInUp" data-wow-delay="0.3s">Explore the finest interior and architectural creations brought to life by our skilled team.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
     <!-- PROJECTS SECTION -->
     <section class="arch-projects-wrapper">
-        <div class="arch-section-title">
-            <h2 class="arch-title-1">our work</h2>
-            <p class="arch-subtitle">Exceptional architectural projects crafted with precision and vision</p>
-        </div>
+     
         <div class="arch-container">
             <!-- Project Tabs Navigation -->
             <div class="arch-project-category-tabs">
