--- a/works.html
+++ b/works.html
@@ -212,7 +212,7 @@
             <nav class="header-nav-menu-mobile">
                 <div class="container-fluid">
                     <ul class="menu nav-menu menu-mobile">
-                        <li class="menu-item menu-item-has-children">
+                        <li class="menu-item ">
                             <a href="index.html">Home</a>
                         </li>
                         <li class="menu-item">
@@ -691,6 +691,8 @@
     <script type="text/javascript" src="js/config-revolution.min.js"></script>
     <script src="js/global.js"></script>
 
+
+    
     <script>
         // Function to redirect to details page
         function redirectToDetails() {
@@ -773,6 +775,12 @@
             const header = document.getElementById('header');
             header.classList.remove('scrolled');
         });
+
+
+
+
+
+        
     </script>
 </body>
 </html>
