--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
                 <nav class="header-nav-menu-mobile">
                     <div class="container-fluid">
                         <ul class="menu nav-menu menu-mobile">
-                            <li class="menu-item menu-item-has-children">
+                            <li class="menu-item">
                                 <a href="index.html">Home</a>
                             </li>
                             <li class="menu-item">
