--- a/details.html
+++ b/details.html
@@ -124,7 +124,7 @@
                 <nav class="header-nav-menu-mobile">
                     <div class="container-fluid">
                         <ul class="menu nav-menu menu-mobile">
-                            <li class="menu-item menu-item-has-children">
+                            <li class="menu-item">
                                 <a href="index.html">Home</a>
                                 
                             </li>
