--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <div class="container-fluid">
                             <div class="header__content">
                                 <div class="logo">
-                                    <a href="/index.html">
+                                    <a href="index.html">
                                         <img src="images/logo.png" alt="Tatee" />
                                     </a>
                                 </div>
@@ -76,7 +76,7 @@
                                     <nav class="header-nav-menu">
                                         <ul class="menu nav-menu">
                                             <li class="menu-item menu-item-has-children">
-                                                <a href="/index.html">Home</a>
+                                                <a href="index.html">Home</a>
                                             </li>
                                             <li class="menu-item">
                                                 <a href="works.html">Our Works</a>
@@ -123,7 +123,7 @@
                 <nav class="header-nav-menu-mobile">
                     <div class="container-fluid">
                         <ul class="menu nav-menu menu-mobile">
-                            <li class="menu-item menu-item-has-children">
+                            <li class="menu-item ">
                                 <a href="index.html">Home</a>
                             </li>
                             <li class="menu-item">
